ADD content, signals

--- a/templates/advertisement/list.html
+++ b/templates/advertisement/list.html
@@ -5,10 +5,10 @@
 {% block content %}
 {% for post in post_list %}
 {% if post.actuality %}
-<a href="{{ request.path }}{{ post.id }}"><h3 align="center"> {{ post.title }}</h3></a>
-<h2 align="center"> {{ post.time_create }}</h2>
-{{ post.description|safe }}
-<h3 align="center"> {{ post.price }} рублей</h3>
+<a href="{{ request.path }}{{ post.id }}"><h3 align="center"> {{ post.title }}</h3></a><br>
+<h2 align="center"> {{ post.time_create }}</h2><br>
+{{ post.description|safe }}<br>
+<h3 align="center"> {{ post.price }} рублей</h3><br>
 {% endif %}
 {% endfor %}
 {% endblock content %}
